# md-analysis

./: .gitignore  pyproject.toml  run_analysis.sh
mda/: __init__.py  loader.py  timestamps.py
mda/layer1/: __init__.py  rates.py
mda/layer2/: __init__.py  aggressor.py  sizes.py  volleys.py
mda/layer3/: __init__.py  execution_rate.py  latency.py  microbursts.py  quantisation.py  sequencing.py
mda/layer4/: __init__.py  bbo.py  levels.py  update_rates.py
mda/layer5/: __init__.py  cross_exchange.py
mda/layer6/: __init__.py  design_specs.py
mda/plots/: __init__.py  charts.py
notebooks/: L1_message_rates.ipynb  L2_trade_flow.ipynb  L3_timestamp_analysis.ipynb  L4_orderbook_dynamics.ipynb  L5_cross_exchange.ipynb  L6_design_translation.ipynb
terraform/: main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
